--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.71.1",
     "sass": "1.54.5"
   },
   "devDependencies": {
