--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "lodash": "^4.17.23",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
