--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "lodash": "^4.17.23",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-awesome-lightbox": "1.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.71.1",
-    "sass": "1.54.5"
+    "react-icons": "4.4.0",
+    "react-select": "5.4.0",
+    "react-toastify": "9.0.8",
+    "sass": "1.54.5",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@types/react": "18.0.17",
