--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "bootstrap": "^5.3.8",
     "lodash": "^4.17.23",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
