--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
+    "immer": "^11.1.3",
     "lodash": "^4.17.23",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "react-select": "5.4.0",
     "react-toastify": "9.0.8",
     "sass": "1.54.5",
+    "use-immer": "^0.11.0",
     "uuid": "9.0.0"
   },
   "devDependencies": {
