--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.8",
     "immer": "^11.1.3",
     "lodash": "^4.17.23",
+    "normalizr": "^3.6.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-awesome-lightbox": "1.8.1",
